--- a/index.html
+++ b/index.html
@@ -6,21 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./public/css/index.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.1/jquery.rateyo.min.css">
+    <link rel="stylesheet" type="text/css" href="./public/css/demo.css">
 </head>
 
 <body>
+  <link rel="stylesheet" type="text/css" href="./public/css/index.css">
   <div class="container-fluid">
     <div class="jumbotron">
       <h1>Form Builder</h1>
     </div>
 
   <div class="main_body">
+  <div class="content">
+    <div id="stage1" class="build-wrap"></div>
+    <form class="render-wrap"></form>
+    <button id="edit-form">Edit Form</button>
+
+    <div class="action-buttons hidden">
+      <h2>Actions</h2>
+      <button id="showData" type="button">Show Data</button>
+      <button id="clearFields" type="button">Clear All Fields</button>
+      <button id="getData" type="button">Get Data</button>
+      <button id="getXML" type="button">Get XML Data</button>
+      <button id="getJSON" type="button">Get JSON Data</button>
+      <button id="getJS" type="button">Get JS Data</button>
+      <button id="setData" type="button">Set Data</button>
+      <button id="addField" type="button">Add Field</button>
+      <button id="removeField" type="button">Remove Field</button>
+      <button id="testSubmit" type="submit">Test Submit</button>
+      <button id="resetDemo" type="button">Reset Demo</button>
+    </div>
+  </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.1/jquery.rateyo.min.js"></script>
+<script src="./public/js/vendor.js"></script>
+  <script src="./public/js/form-builder.min.js"></script>
+  <script src="./public/js/form-render.min.js"></script>
+  <script src="./public/js/demo.js"></script>
   <script src="./public/js/index.js"></script>
 </body>
 </html>
