Adding new form elements. Change in layout.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   <link rel="stylesheet" type="text/css" href="./public/css/index.css">
   <div class="container-fluid">
-    <div class="jumbotron">
+<!--     <div class="jumbotron">
       <h1>Form Builder</h1>
-    </div>
+    </div> -->
 
   <div class="main_body">
   <div class="content">
