--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.1/jquery.rateyo.min.css">
     <link rel="stylesheet" type="text/css" href="./public/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="./public/css/form-builder.min.css">
+    <link rel="stylesheet" type="text/css" href="./public/css/form-builder.min.css">
 </head>
 
 <body>
@@ -45,8 +47,8 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.1/jquery.rateyo.min.js"></script>
 <script src="./public/js/vendor.js"></script>
-  <script src="./public/js/form-builder.min.js"></script>
-  <script src="./public/js/form-render.min.js"></script>
+  <script src="./public/js/form-builder.js"></script>
+  <script src="./public/js/form-render.js"></script>
   <script src="./public/js/demo.js"></script>
   <script src="./public/js/index.js"></script>
 </body>
