--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.3.1/jquery.rateyo.min.js"></script>
 <script src="./public/js/vendor.js"></script>
   <script src="./public/js/form-builder.js"></script>
-  <script src="./public/js/form-render.js"></script>
+  <script src="./public/js/form-render.min.js"></script>
   <script src="./public/js/demo.js"></script>
   <script src="./public/js/index.js"></script>
 </body>
